--- a/11.leavemealone.html
+++ b/11.leavemealone.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Turn On the Lights again.. – 楽曲詳細解説</title>
+<title>leavemealone – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
     background: #fffefa;
     color: #222;
-    line-height: 1.65;
+    line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
@@ -19,6 +19,15 @@
     margin-top: 1.6em;
     margin-bottom: 0.7em;
   }
+  p, ul, li, pre {
+    margin: 0.6em 0;
+  }
+  ul {
+    padding-left: 1.4em;
+  }
+  ul li {
+    margin-bottom: 0.4em;
+  }
   pre {
     background: #f7f7f7;
     border-radius: 6px;
@@ -26,21 +35,12 @@
     white-space: pre-wrap;
     word-break: break-word;
     font-family: "Courier New", Courier, monospace;
-    margin-bottom: 1em;
   }
-  ul {
-    padding-left: 1.4em;
-    margin: 0.6em 0;
-  }
-  ul li {
-    margin-bottom: 0.4em;
-  }
-  p { margin: 0.6em 0; }
   #toc {
     background: #dceeff;
     border: 1px solid #99bbff;
     border-radius: 8px;
-    padding: 1em 1.2em;
+    padding: 1em 1em 1em 1.2em;
     margin-bottom: 2em;
   }
   #toc h2 {
@@ -59,74 +59,90 @@
     text-decoration: none;
     font-weight: 600;
   }
-  #toc a:hover, #toc a:focus {
+  #toc a:hover,
+  #toc a:focus {
     text-decoration: underline;
   }
   @media (max-width: 480px) {
-    body {font-size: 1em; padding: 0.8em 1em;}
-    h1 { font-size: 1.5em; }
-    h2 { font-size: 1.2em; }
+    body {
+      padding: 0.8em 1em;
+      font-size: 1em;
+    }
+    h1 {
+      font-size: 1.5em;
+    }
+    h2 {
+      font-size: 1.2em;
+    }
   }
 </style>
 </head>
 <body>
 
-<h1>Turn On the Lights again.. – 楽曲詳細解説</h1>
+<h1>leavemealone – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
     <li><a href="#episode">制作時のエピソード</a></li>
-    <li><a href="#lyrics">英語歌詞</a></li>
+    <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
     <li><a href="#translation">歌詞の和訳・意訳</a></li>
-    <li><a href="#interpretation">詩的解釈・まとめ</a></li>
+    <li><a href="#interpretation">意訳・詩的解釈</a></li>
   </ul>
 </nav>
 
 <section id="episode">
   <h2>制作時のエピソード</h2>
   <p>
-    <strong>“Turn On the Lights again..”</strong>は、Fred again..とSwedish House Mafia、そしてラッパーFutureによるコラボレーション楽曲で、2022年7月29日にリリースされました。
+    <strong>“leavemealone”</strong>は、Fred again..とラッパーBaby Keemによるコラボレーション曲で、2023年12月8日にリリースされました。第67回グラミー賞の「Best Dance/Electronic Recording」部門にノミネートされるなど、高い評価を得た作品です。
   </p>
   <p>
-    この楽曲の制作きっかけは、Fred again..がTikTok上でFutureの代表曲「Turn On the Lights」サビを繰り返し視聴していたことに遡ります。Fredは「Turn on the lights」の印象的なボーカルフレーズを自身のサンプリング素材としてリッピングし、その声を軸にデモトラックへと構築していきました。
+    楽曲は、Fred again..が2022年の夏、シカゴにあるByline Bank Aragon Ballroomでのライブセット中に未完成バージョンを初披露したことで知られています。観客の強い反応から正式リリースにつながりました。
   </p>
   <p>
-    Fred again..はこのサンプルをベースにデモを制作し、それをSwedish House Mafiaへ送付。彼らは何度もミックスを試行錯誤し、クラブフロアでの響きを最大化すべく丁寧なフィルター処理とダイナミックス調整を加えました。その結果、Fred again..の情感溢れるフレージングとFuture原曲のパワフルなエネルギーが融合した、ダンスフロアで高揚感を放つエモーショナルなアンセムに仕上げられました。
+    制作にはBaby Keemの過去楽曲「Bullies」（2019年）と「South Africa」（2021年）からヴォーカルサンプルが大胆に使用され、Fred again..はTracklibを用いてこれら素材の切り刻みやリピッチを行い、まったく新鮮なサウンドとして再構築しました。サンプルクリアランスはBaby Keem本人に直接連絡して取得し、正式な共同制作として成立しました。
   </p>
   <p>
-    Fred again..はこの曲を通じ「ダンスミュージックにおける ‘再生’ や ‘救済’」のテーマを描くだけでなく、原曲への深いリスペクトも示しています。Swedish House Mafiaの洗練されたクラブサウンドが加わったことで、よりスケール感のある壮大なダンスアンセムとなっています。
+    プロダクションメンバーにはFred again..のほか、Alex Gibson、Boo、Four TetことKieran Hebden、Sid Stone、Skrillexらがクレジットされており、各自が楽曲を彩る役割を果たしています。
+  </p>
+  <p>
+    楽曲は、ドラムンベース由来のローリングベースラインとBaby Keemの独特のハーフタイム・フローがシームレスに切り替わる構成が特徴的で、クラブフロアからヘッドフォンリスニングまで幅広いシチュエーションで高い没入感を提供しています。
   </p>
 </section>
 
 <section id="lyrics">
-  <h2>英語歌詞</h2>
+  <h2>英語歌詞（主要パート）</h2>
   <pre>
-[Intro]
-Turn on the lights  
-Turn on the lights  
-There's things I'm goin' through  
-And what they goin' through right now, it's like
+[Intro]  
+Hey  
+Leave me alone  
+Leave me alone  
+Y’all better leave me alone  
+Leave me alone  
+(Bless up)
 
-[Bridge]
-Turn on the lights  
-Turn on the lights  
-Turn on the lights  
-Turn on the lights  
-Turn on the lights
+[Chorus]  
+Everybody on a little mission, mission  
+Money make a—, go-go missin’, missin’  
+I can turn you on in an instant, instant  
+Everybody leave me, leave me, leave me alone  
+…  
+Touchin’ on your booby, get ’em lifted, lifted  
+She wanna get lit-lit, lit-lit  
+Fuckin’ on—, fuckin’ on—  
+Battlin’ a—, battlin’ a—, battlin’ a—
 
-[Drop]
-Turn on the lights  
-Turn on the lights
+[Bridge]  
+I don’t wanna leave  
+I-I don’t wanna leave  
+Lea-leave me alone  
+I-I-I don’t wanna leave  
+I am a party (Bless up)
 
-[Refrain]
-And tell her I've been lookin' for her  
-And tell her I've been lookin' for her  
-And tell her I've been lookin' for her  
-I'm lookin' for, I'm lookin' for her  
-I'm lookin' for, I'm lookin' for her
+[Verse]  
+My mama tried to warn these hoes not to break my heart again  
+…
   </pre>
-  <p>（繰り返しとシンプルなボーカルサンプリングが全体を通して印象的に響く構成です）</p>
 </section>
 
 <section id="translation">
@@ -134,39 +150,52 @@ I'm lookin' for, I'm lookin' for her
   <p><strong>直訳</strong></p>
   <p>
     〈Intro〉<br>
-    「灯りを点けて<br>
-    灯りを点けて<br>
-    僕には乗り越えなければならないことがある<br>
-    そして、彼らが今経験していることは、こんな感じだ」
+    「ねえ<br>
+     ほっといてくれ<br>
+     ほっといてくれ<br>
+     みんな俺をほっといてくれ<br>
+     ほっといてくれ<br>
+     （ありがとう）」
   </p>
   <p>
-    〈Bridge〜Drop〉<br>
-    「灯りを点けて（繰り返し）」
+    〈Chorus〉<br>
+    「みんなそれぞれのミッションに向かっている<br>
+     お金は消えていく<br>
+     俺は一瞬で君を熱くできる<br>
+     みんな俺をほっといてくれ<br>
+     ...<br>
+     お前の胸に触れて、みんな盛り上がっている<br>
+     彼女は盛り上がりたいんだ<br>
+     ヤっている<br>
+     戦い続けている」
   </p>
   <p>
-    〈Refrain〉<br>
-    「彼女に伝えて、ずっと君を探していると<br>
-    彼女に伝えて、ずっと君を探していると<br>
-    彼女に伝えて、ずっと君を探していると<br>
-    僕は君を探している、君を探している<br>
-    僕は君を探している、君を探している」
+    〈Bridge〉<br>
+    「俺は離れたくない<br>
+     離れたくないんだ<br>
+     ほっといてくれ<br>
+     離れたくない<br>
+     俺はパーティーだ（ありがとう）」
+  </p>
+  <p>
+    〈Verse〉<br>
+    「母さんが言ったんだ、この女たちにまた心を壊されるなって…」
   </p>
 </section>
 
 <section id="interpretation">
-  <h2>詩的解釈・まとめ</h2>
+  <h2>意訳・詩的解釈</h2>
   <p>
-    この楽曲は暗闇のなかで大切な人を探し、再び「灯り」を点すことへの切実な願いを繰り返しのフレーズで描いています。
-    <ul>
-      <li> “Turn on the lights” は、物理的な光だけでなく、心の中の「絶望や喪失の闇」を照らす<em>希望</em>や<em>救い</em>の象徴として強く響きます。</li>
-      <li>「彼女をずっと探している」と執拗にリフレインされるメッセージは、喪失を経てもなお諦めず大切な誰かに手を伸ばし続ける<strong>執着と強い意志</strong>を象徴します。</li>
-      <li>Swedish House Mafiaのダイナミックなサウンドと、Fred again..の繊細なフレージング、Futureの原曲サンプルが化学反応し、ダンスフロアの高揚感と個人的な内省の両方を両立する楽曲になっています。</li>
-      <li>「再び灯りを点す」は、絶望や闇から立ち上がる再生のメタファーであり、リスナー一人一人の心にも前向きさや力強さを呼び起こす普遍性を持っています。</li>
-    </ul>
+    本曲は、<strong>周囲の期待や圧力に疲弊しつつも、自身のペースとスタイルを貫こうとする強い意志の叫び</strong>を表現しています。繰り返される「Leave me alone（ほっといてくれ）」は、外部からの干渉や束縛に対する切実な解放願望を象徴します。
   </p>
   <p>
-    <strong>まとめ：</strong>  
-    “Turn On the Lights again..”は、クラブサウンドならではの躍動感と心を打つ普遍的な希望のメッセージを融合した現代アンセム。サンプリングを巧みに活かしたFred again..流のプロダクションが光り、誰もが「再び光が差す瞬間」を待ち望む時代の希望を音楽で体現した楽曲となっています。
+    また、性的イメージやパーティーシーンの描写を通じ、ダンスカルチャーの快楽主義やエネルギーの循環が表現されつつ、その中にある孤独感や自己防衛もにじませています。
+  </p>
+  <p>
+    ブリッジでの「I don’t wanna leave」には、自身の居場所を守りたいという強い願望と同時に、矛盾した感情の揺れ動きが示唆されます。Fred again..のプロダクションは、ドラムンベースの深いグルーヴとヒップホップライクなリリックが融合し、多層的な感情表現を実現しています。
+  </p>
+  <p>
+    “leavemealone”はFred again..とBaby Keemによるユニークなセッションから生まれ、クラブフロアの高揚感とパーソナルな葛藤や孤独が両立する、現代的な多面性を持った傑作トラックといえます。
   </p>
 </section>
 
