Update 13.Danielle (smile on my face).html

--- a/13.Danielle (smile on my face).html
+++ b/13.Danielle (smile on my face).html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Danielle (smile on my face) – 詳細解説</title>
+<title>Delilah (pull me out of this) – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -17,42 +17,35 @@
     color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p {
+  p, ul, li, pre {
     margin: 0.6em 0;
+  }
+  ul {
+    list-style: none;
+    padding-left: 0;
   }
   pre {
     background: #f7f7f7;
-    padding: 1em;
     border-radius: 6px;
+    padding: 1em;
     white-space: pre-wrap;
     word-break: break-word;
-    margin: 0.6em 0 1.2em 0;
-  }
-  ul {
-    padding-left: 1.4em;
-  }
-  ul li {
-    margin: 0.4em 0;
+    font-family: "Courier New", Courier, monospace;
   }
   #toc {
     background: #dceeff;
     border: 1px solid #99bbff;
     border-radius: 8px;
-    padding: 1em 1em 1em 1.2em;
-    margin-bottom: 1.8em;
+    padding: 1em 1.2em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
   }
-  #toc ul {
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-  }
   #toc ul li {
-    margin: 0.3em 0;
+    margin: 0.4em 0;
   }
   #toc a {
     color: #0055aa;
@@ -62,8 +55,8 @@
   #toc a:hover,
   #toc a:focus {
     text-decoration: underline;
+    outline: none;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
       padding: 0.8em 1em;
@@ -80,48 +73,50 @@
 </head>
 <body>
 
-<h1>Danielle (smile on my face) – 詳細解説</h1>
+<h1>Delilah (pull me out of this) – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#album-info">収録アルバム・基本情報</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
-    <li><a href="#lyrics">英語歌詞（可能な限り完全版）</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
     <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">意訳・詩的解釈</a></li>
   </ul>
 </nav>
 
-<section id="album-info">
-  <h2>収録アルバム・基本情報</h2>
-  <p><strong>収録アルバム：</strong>Actual Life 3 (January 1 – September 9 2022)</p>
-  <p><strong>リリース日：</strong>2022年9月14日</p>
-  <p><strong>ジャンル：</strong>エレクトロニック／ダンス</p>
-  <p><strong>サンプリング元：</strong>070 Shake「Nice To Have」</p>
-</section>
-
-<section id="production">
+<section id="episode">
   <h2>制作時のエピソード</h2>
-  <p>Fred again.. は自身の「Actual Life」シリーズの特徴である日常の断片を音楽に昇華する手法を本楽曲でも用いています。</p>
-  <p>070 Shake本人もこのサンプリングについて、「Fredが私の声を新しい文脈で蘇らせてくれた」と肯定的に語っており、相互のリスペクトが感じられます。</p>
+  <p><strong>“Delilah (pull me out of this)”</strong>は、Fred again..のアルバム『Actual Life 3 (January 1 – September 9 2022)』からのシングル第4弾として2022年10月28日にリリースされました。Boiler Roomでのライブセットにて初披露され、SNS上で大きな話題となった楽曲で、現在では数百万回のストリーミング再生数を記録しています。</p>
+  <p>制作の中心となるボーカルは、Fredの友人で歌手・アーティストのDelilah MontaguがInstagramに投稿した自身の楽曲 “Lost Keys” のライブ映像から歌唱断片をサンプリングしたものです。Delilah本人はこの曲について、「クラブでのパニック発作に襲われた体験を書いた」と語っており、その切実でリアルな感情が楽曲の核として生かされています。</p>
+  <p>Fred again..はライブセット中にこのサンプルを即興的に多重ループで重ね、観客の歓声や呼びかけも取り込みながらトラックを構築しました。この制作手法は彼の代表的なスタイルの一つである「日常の断片をダンスミュージックへ昇華するアプローチ」を体現しており、楽曲に生々しい臨場感と暖かみを与えています。</p>
 </section>
 
 <section id="lyrics">
-  <h2>英語歌詞（可能な限り完全版）</h2>
+  <h2>英語歌詞（主要パート）</h2>
   <pre>
 [Intro]  
-(You don’t know, don’t worry)
+So when I just got here  
+I was just a bit like  
+I don’t want to be here anymore  
+Pull me out of this  
+(Hey Fred)  
+(Hahahaha, holy shit)
 
-[Verse 1: 070 Shake]  
-Sometimes I wanna feel the pain  
-You said you were done  
-But you’re over here naked  
-In the middle of the day  
-Sometimes I wanna feel the pain  
-You said you were done  
-Fuck what they say, I’m safe in your arms  
-And if I die in your arms  
-There’ll be a smile on my face
+[Pre-Drop / Drop]  
+Pull me out of this
+
+[Bridge]  
+Touch me (Oh my god)  
+Talk to me (I knew we were gonna dance, but)  
+(We danced so hard)  
+Touch me (Hahahaha, holy shit)  
+Talk to me / Touch me / Talk to me
+
+[Outro Drop]  
+Music, the music, the music  
+The music’s getting faster  
+(Oh my god)
   </pre>
 </section>
 
@@ -129,23 +124,37 @@ There’ll be a smile on my face
   <h2>歌詞の和訳・意訳</h2>
   <p><strong>直訳</strong></p>
   <p>〈Intro〉<br>
-    「あなたは知らない、心配しないで」</p>
-  <p>〈Verse 1〉<br>
-    「時々、痛みを感じたくなる<br>
-    君はもう終わりだと言ったけれど<br>
-    君は昼間に裸でここにいる<br>
-    時々、痛みを感じたくなる<br>
-    君はもう終わりだと言った<br>
-    彼らが何と言おうと、君の腕の中で安心している<br>
-    もし君の腕の中で死ぬことになっても<br>
-    顔には笑みが浮かぶだろう」</p>
+    「ここに来たとき、ちょっとこう感じた<br>
+    もうここにはいたくないんだ<br>
+    私をここから連れ出して<br>
+    （ヘイ、フレッド）<br>
+    （ハハハ、ヤバい！）」
+  </p>
+  <p>〈Pre-Drop / Drop〉<br>
+    「私をここから連れ出して」
+  </p>
+  <p>〈Bridge〉<br>
+    「触れて（オーマイガー）<br>
+    話しかけて（踊るって分かってたけど）<br>
+    （私たちはめちゃくちゃ踊った）<br>
+    触れて（ハハハ、ヤバい！）<br>
+    話しかけて / 触れて / 話しかけて」
+  </p>
+  <p>〈Outro Drop〉<br>
+    「音楽、音楽、音楽<br>
+    音楽はどんどん速くなっていく<br>
+    （オーマイガー）」
+  </p>
+</section>
 
-  <p><strong>意訳・詩的解釈</strong></p>
-  <p>本楽曲は「痛みと救いの均衡」をテーマに設定しています。</p>
-  <p>「時々、痛みを感じたくなる」というフレーズは、自らの感情に向き合う勇気と葛藤を示し、</p>
-  <p>「君の腕の中でなら安心」という表現は、愛による救済と依存の複雑な関係性を表現しています。</p>
-  <p>Fred again..は070 Shakeの繊細なボーカルをフューチャーし、内省的な痛みと高揚感が混在する新しいダンストラックを創造しました。</p>
+<section id="interpretation">
+  <h2>意訳・詩的解釈</h2>
+  <p>この楽曲は「クラブの喧騒や混乱の中で感じる不安」と「信頼できる存在からの救い」を絶妙に描写しています。繰り返される「Pull me out of this（私をここから連れ出して）」は、混沌やパニック、孤独といった心理的状態から抜け出したいという切実な叫びとして機能します。</p>
+  <p>「Touch me」「Talk to me」というフレーズは、身体的な安心感や言葉によるコミュニケーションへの欲求を示しており、特にクラブ空間の中での人間関係の象徴とも解釈可能です。</p>
+  <p>サンプリングされた観客の歓声や「holy shit」のかけ声が散りばめられていて、リアルなライブの熱気がそのまま楽曲に溶け込んでいることも特徴的です。</p>
+  <p>楽曲は内面的な不安や混乱のテーマを扱いながらも、パーティの高揚感やノリの良さも同時に伝え、聴き手を感情のダイナミズムに引き込む秀逸な作品となっています。</p>
 </section>
 
 </body>
 </html>
+
