--- a/14.Angie (I’ve Been Lost).html
+++ b/14.Angie (I’ve Been Lost).html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Angie (I’ve Been Lost) – 詳細解説</title>
+<title>Angie (I’ve Been Lost) – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -17,15 +17,21 @@
     color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p, pre {
+  p, pre, ul, li {
     margin: 0.6em 0;
+  }
+  ul {
+    padding-left: 1.4em;
+  }
+  ul li {
+    margin-bottom: 0.4em;
   }
   pre {
     background: #f7f7f7;
-    padding: 1em;
     border-radius: 6px;
+    padding: 1em;
     white-space: pre-wrap;
     word-break: break-word;
     font-family: "Courier New", Courier, monospace;
@@ -34,7 +40,7 @@
     background: #dceeff;
     border: 1px solid #99bbff;
     border-radius: 8px;
-    padding: 1em 1em 1em 1.2em;
+    padding: 1em 1.2em;
     margin-bottom: 1.8em;
   }
   #toc h2 {
@@ -57,7 +63,6 @@
   #toc a:focus {
     text-decoration: underline;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
       padding: 0.8em 1em;
@@ -74,36 +79,32 @@
 </head>
 <body>
 
-<h1>Angie (I’ve Been Lost) – 詳細解説</h1>
+<h1>Angie (I’ve Been Lost) – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#album-info">収録アルバム・基本情報</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
-    <li><a href="#lyrics">リリック（英語原文）</a></li>
-    <li><a href="#outro">アウトロ歌詞</a></li>
-    <li><a href="#poetic">詩的考察</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">意訳・詩的考察</a></li>
   </ul>
 </nav>
 
-<section id="album-info">
-  <h2>収録アルバム・基本情報</h2>
-  <p><strong>収録アルバム：</strong>Actual Life (April 14 – December 17 202)</p>
-  <p><strong>リリース日：</strong>2021年4月16日</p>
-  <p><strong>ジャンル：</strong>エレクトロニック／ダンス</p>
-  <p><strong>コラボレーション・ボーカル：</strong>Angie McMahon</p>
-  <p><strong>プロデューサー／エンジニア：</strong>Fred again..、Henry Counsell（追加プロダクション）、Jay Reynolds（ミキシング＆マスタリング）、PARISI</p>
-</section>
-
-<section id="production">
+<section id="episode">
   <h2>制作時のエピソード</h2>
-  <p>制作はほぼ自宅スタジオで、iPhoneやフィールド録音を積極的に使いながら、「心の揺らぎと救済」をテーマにリリックを大胆にループさせる非線形的な手法で進められました。</p>
+  <p><strong>“Angie (I’ve Been Lost)”</strong>は、Fred again..が2021年4月16日にリリースした楽曲で、アルバム『Actual Life (April 14 – December 17 202)』に収録されています。ジャンルはエレクトロニック・ダンスに分類され、Fred again..の代表的な「Actual Life」シリーズにおける重要曲の一つとして高く評価されています。</p>
+  <p>本楽曲はオーストラリア出身のシンガーソングライター、Angie McMahonの楽曲「Pasta」のサビ部分「I’ve been lost / I’ve been lost for a while」を大胆にサンプリングして制作されました。Fred again..はInstagramを通じてMcMahonに直接サンプリング許可を取得し、双方にとって特別なコラボレーションとなりました。Angie McMahon本人も「自分の言葉が新しい音楽的文脈の中で蘇ったことに感動した」と語っています。</p>
+  <p>制作は主にFred again..の自宅スタジオで行われ、iPhoneやフィールド録音を活用して断片的かつ非線形的にサンプリングを重ねる手法が用いられました。これは彼の師匠であるBrian Enoの音楽哲学に強く影響を受けており、ダンスミュージックの枠を超えた内省的なサウンドスケープを生み出しています。</p>
 </section>
 
 <section id="lyrics">
-  <h2>リリック（英語原文）</h2>
+  <h2>英語歌詞（主要パート）</h2>
   <pre>
+[Intro]  
+(You don’t know, don’t worry)
+
+[Verse 1: Angie McMahon]  
 I've been lost, I've been lost  
 I've been lost, I've been lost for a while  
 But I'm really tryin'  
@@ -140,16 +141,32 @@ Don't have nothin' left
   </pre>
 </section>
 
-<section id="outro">
-  <h2>アウトロ歌詞</h2>
-  <p>今を生きるこの瞬間　共に乗り越えよう<br>失うものはもうない</p>
+<section id="translation">
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳</strong></p>
+  <p>〈Intro〉<br>
+    「君は知らなくていい、心配しなくていい」</p>
+  <p>〈Verse 1〉<br>
+    「私は迷子だった、ずっと迷子のままだった<br>
+    だけど本気で前に進もうとしている<br>
+    私は何も持っていない<br>
+    壊さないで、私を壊さないでくれ」</p>
+  <p>〈リフレイン〉<br>
+    「迷子のままだけど、努力している<br>
+    傷つき、壊れ、歪んでしまった<br>
+    でもあなたがいるから、もう一度頑張れる」</p>
+  <p>〈アウトロ〉<br>
+    「私たちは乗り越えるだろう<br>
+    どんなに苦しくても<br>
+    何も残っていなくても<br>
+    今生きているから」</p>
 </section>
 
-<section id="poetic">
-  <h2>詩的考察</h2>
-  <p>“Angie (I’ve Been Lost)” は、現代社会が抱える不安や個人の孤独を表現するとともに、エモーショナル・ダンスミュージックという形式でトラウマと再生の物語を描いた革新的なトラックです。</p>
-  <p>Angie McMahonのメロディックなフレーズとFred again..の繰り返しを多用したサウンドデザインが交差し、精神的な痛みと救済の両面が大規模フェスティバルのフロアから個人的なヘッドフォン試聴まで、幅広いリスナーに共感と感動をもたらしています。</p>
-  <p>特に、パーソナルな痛みを隠さずに音楽作品として昇華させるFred again.. の「Actual Life」シリーズの中心テーマを体現している点で高い評価を得ています。</p>
+<section id="interpretation">
+  <h2>意訳・詩的考察</h2>
+  <p>本曲は、「迷子であること」と「再生への強い意志」という相反する感情を繊細に描写しています。Angie McMahonの繊細さとFred again..の内省的なプロダクションが融合し、ダンスミュージックながら深い共感を呼び起こします。</p>
+  <p>繰り返される「何も持っていない」「壊さないで」というフレーズは、不安や葛藤を映し出しつつ、聴き手に寄り添います。また「あなたがいるから続けられる」という言葉は、孤独の中の支えや希望を象徴しています。</p>
+  <p>Fred again..の非線形的で断片的なサンプリング手法は、断片的な感情や記憶の集積として表現され、それが独特の空間とムードを作り上げています。</p>
 </section>
 
 </body>
