Update 15.Clara (the night is dark).html

--- a/15.Clara (the night is dark).html
+++ b/15.Clara (the night is dark).html
@@ -3,37 +3,45 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Clara (the night is dark) – 詳細解説</title>
+<title>Clara (the night is dark) – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fafafa;
+    background: #fffefa;
     color: #222;
     line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
   h1, h2 {
+    color: #0077cc;
     font-weight: bold;
-    color: #007acc;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p {
+  p, ul, li, pre {
     margin: 0.6em 0;
   }
   ul {
     padding-left: 1.4em;
   }
   ul li {
-    margin: 0.4em 0;
+    margin-bottom: 0.4em;
+  }
+  pre {
+    background: #f7f7f7;
+    border-radius: 6px;
+    padding: 1em;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: "Courier New", Courier, monospace;
   }
   #toc {
     background: #dceeff;
     border: 1px solid #99bbff;
     border-radius: 8px;
-    padding: 1em 1em 1em 1.2em;
-    margin-bottom: 1.8em;
+    padding: 1em 1.2em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
@@ -48,18 +56,17 @@
   }
   #toc a {
     color: #0055aa;
-    font-weight: 600;
     text-decoration: none;
+    font-weight: 600;
   }
   #toc a:hover,
   #toc a:focus {
     text-decoration: underline;
   }
-  /* モバイル対応 */
-  @media (max-width: 480px) {
+  @media (max-width:480px) {
     body {
-      font-size: 1em;
       padding: 0.8em 1em;
+      font-size: 1em;
     }
     h1 {
       font-size: 1.5em;
@@ -72,39 +79,106 @@
 </head>
 <body>
 
-<h1>Clara (the night is dark) – 詳細解説</h1>
+<h1>Clara (the night is dark) – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#album">収録アルバムとプロデューサー</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
-    <li><a href="#lyrics">主な歌詞と繰り返し表現</a></li>
-    <li><a href="#interpretation">意訳・詩的解釈</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">詩的解釈・まとめ</a></li>
   </ul>
 </nav>
 
-<section id="album">
-  <h2>収録アルバムとプロデューサー</h2>
-  <p>本楽曲は、アルバム <strong>Actual Life 3 (January 1 – September 9 2022)</strong> に収録されています。</p>
-  <p>プロデューサーは Fred again.. と PARISI が担当し、Fredの「Actual Life」シリーズに特有の「日常の断片をダンス・ミュージックに昇華する」手法が採用されています。</p>
-</section>
-
-<section id="production">
+<section id="episode">
   <h2>制作時のエピソード</h2>
-  <p>PARISIはドラムやシンセプログラミングで参加し、本楽曲ではシンプルながらも荘厳なサウンドを生み出しています。</p>
-  <p>Fred again.. の“Actual Life”シリーズの特徴である、生活の断片から切り出したサウンドや日常の感情を、マクロな音像描写と合わせて表現しています。</p>
+  <p>
+    <strong>“Clara (the night is dark)”</strong>は、Fred again..が2022年10月28日にリリースしたシングルで、アルバム『Actual Life 3 (January 1 – September 9 2022)』に収録されています。  
+    ジャンルとしてはエレクトロニックとゴスペル・アンセムの融合という独特な位置づけであり、Fred again..の「日常の断片を音楽に昇華する」というコンセプトを象徴する作品のひとつです。
+  </p>
+  <p>
+    本楽曲の核となるボーカルサンプルは、1994年に発表されたアメリカの伝説的ゴスペルグループ、Clara Ward Singersの楽曲「The Storm Is Passing Over」から抽出されています。  
+    Fred again..はこの荘厳なゴスペルコーラスを大胆に楽曲に取り入れ、現代的なエレクトロニック・サウンドと融合させることで、年代やジャンルを超えた感情豊かな交差点を生み出しました。
+  </p>
+  <p>
+    プロデュースにはFred again..のほか、PARISI（Giampaolo &amp; Marco Parisi）が参加し、ドラムやシンセプログラミングを担当しています。  
+    ミキシング・マスタリングはJay Reynoldsが担当し、楽曲全体に丁寧で透明感のあるサウンドが施されています。
+  </p>
 </section>
 
 <section id="lyrics">
-  <h2>主な歌詞と繰り返し表現</h2>
-  <p>楽曲内で繰り返される<strong>「Though the night is dark / It won't be very long」</strong>というフレーズは、苦境が一時的であること、やがて夜明けが訪れるという信仰と励ましを強調しています。</p>
+  <h2>英語歌詞</h2>
+  <pre>
+[Intro &amp; Chorus: Clara Ward Singers]  
+Courage, my soul  
+And let us journey on  
+Though the night is dark  
+It won't be very long  
+Courage, my soul  
+And let us journey on  
+Though the night is dark  
+It won't be very long  
+(If you don't know, don't worry)
+
+[Refrain &amp; Bridge]  
+It won't be very long (×8)  
+(It won't be very long)
+
+[Outro: Clara Ward Singers]  
+Don't worry  
+The morning light appears  
+The morning light appears  
+You're in here crazy like, don't worry
+  </pre>
+  <p>
+    （上記は繰り返しの多い楽曲構造を踏まえて主要な歌詞フレーズを抜粋しています）
+  </p>
+</section>
+
+<section id="translation">
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳</strong></p>
+
+  <p>
+    〈イントロ＆コーラス〉<br>
+    「勇気を持て、我が魂よ<br>
+    そして歩みを進めよ<br>
+    夜は暗いけれど<br>
+    もうすぐ明ける<br>
+    勇気を持て、我が魂よ<br>
+    そして歩みを進めよ<br>
+    夜は暗いけれど<br>
+    もうすぐ明ける<br>
+    （分からなくても、心配はいらない）」
+  </p>
+  <p>
+    〈リフレイン＆ブリッジ〉<br>
+    「もうすぐ明ける」（8回繰り返し）
+  </p>
+  <p>
+    〈アウトロ〉<br>
+    「心配しないで<br>
+    朝の光がやってくる<br>
+    朝の光がやってくる<br>
+    ここにいるのは狂っているかも、でも心配しないで」
+  </p>
 </section>
 
 <section id="interpretation">
-  <h2>意訳・詩的解釈</h2>
-  <p>このトラックは、ゴスペル的な祈りと励ましのメッセージを持ち、苦しい状況の中にあっても希望を失わず、闇の先に光があることを示唆しています。</p>
-  <p>シンプルで反復的な構成ながら、リスナーに力強い共感とカタルシスを提供し、Fred again..のテーマである「日常の感情からの救済」を端的に表現しています。</p>
+  <h2>詩的解釈・まとめ</h2>
+  <p>
+    この楽曲は、困難で暗い状況にあっても必ず夜明けが訪れるという普遍的な希望のメッセージを伝えるゴスペルアンセムです。
+  </p>
+  <ul>
+    <li>「Courage, my soul（勇気を持て、我が魂よ）」は、自己への励ましと祈りの言葉で、心の中の強さを呼び覚まします。</li>
+    <li>「Though the night is dark / It won't be very long（夜は暗いけれど、すぐに明ける）」の繰り返しは、苦しい時期が永遠ではないこと、乗り越えられることを強調し、リスナーに安心感を与える呪文のような効果をもたらしています。</li>
+    <li>アウトロの「Don't worry, The morning light appears（心配しないで、朝の光がやってくる）」は、絶望からの解放と再生を象徴しています。「You're in here crazy like, don't worry」という表現には、心の混乱や葛藤を抱えながらも希望を失わない強さが込められています。</li>
+    <li>Fred again..の制作哲学である「日常の断片を音楽に昇華する」アプローチが本作にも色濃く反映されており、伝統的なゴスペル音楽の精神と現代のエレクトロニック・ダンスミュージックが見事に融合しています。</li>
+  </ul>
+  <p>
+    結果として“Clara (the night is dark)”は、穏やかな荘厳さを持ちつつ、多くのリスナーに力強い共感と励ましを届ける感動的なアンセムとなっています。
+  </p>
 </section>
 
 </body>
