Update 16.Marea (we’ve lost dancing).html

--- a/16.Marea (we’ve lost dancing).html
+++ b/16.Marea (we’ve lost dancing).html
@@ -3,35 +3,42 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Marea (we’ve lost dancing) – 詳細解説</title>
+<title>Marea (we’ve lost dancing) – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fafafa;
+    background: #fffefa;
     color: #222;
     line-height: 1.7;
     margin: 0;
-    padding: 1em 1.2em;
+    padding: 1em 1.4em;
   }
   h1, h2 {
     color: #0073cc;
     font-weight: bold;
     margin-top: 1.8em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p {
+  p, ul, li, pre {
     margin: 0.7em 0;
   }
   ul {
-    padding-left: 1.4em;
-    margin: 0.5em 0;
+    padding-left: 1.5em;
   }
   ul li {
-    margin-bottom: 0.4em;
+    margin-bottom: 0.5em;
+  }
+  pre {
+    background: #f7f7f7;
+    padding: 1em;
+    border-radius: 8px;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: "Courier New", Courier, monospace;
   }
   #toc {
-    background: #e3f0ff;
-    border: 1px solid #a2c4ff;
+    background: #d9eaff;
+    border: 1px solid #a3c4ff;
     border-radius: 8px;
     padding: 1em 1.2em;
     margin-bottom: 2em;
@@ -41,11 +48,11 @@
   }
   #toc ul {
     list-style: none;
-    padding-left: 0;
     margin: 0;
+    padding-left: 0;
   }
   #toc ul li {
-    margin: 0.35em 0;
+    margin: 0.4em 0;
   }
   #toc a {
     color: #0055aa;
@@ -55,49 +62,28 @@
   #toc a:hover,
   #toc a:focus {
     text-decoration: underline;
+    outline: none;
   }
-  /* モバイル対応 */
-  @media (max-width:480px) {
+  @media (max-width: 480px) {
     body {
-      padding: 0.9em 1em;
       font-size: 1em;
+      padding: 0.8em 1em;
+      line-height: 1.5;
     }
     h1 {
-      font-size: 1.5em;
+      font-size: 1.4em;
     }
     h2 {
-      font-size: 1.3em;
+      font-size: 1.1em;
     }
   }
 </style>
 </head>
 <body>
 
-<h1>Marea (we’ve lost dancing) – 詳細解説</h1>
+<h1>Marea (we’ve lost dancing) – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#release">リリース日・基本情報</a></li>
-    <li><a href="#artist">アーティスト情報</a></li>
-    <li><a href="#wiki">Wikipediaリンク</a></li>
-  </ul>
-</nav>
-
-<section id="release">
-  <h2>リリース日・基本情報</h2>
-  <p>2021年2月22日にリリースされました。</p>
-</section>
-
-<section id="artist">
-  <h2>アーティスト情報</h2>
-  <p>Fred again.. と The Blessed Madonna（Marea Stamper）によるコラボ作品です。</p>
-</section>
-
-<section id="wiki">
-  <h2>Wikipediaリンク</h2>
-  <p><a href="https://en.wikipedia.org/wiki/Marea_(We've_Lost_Dancing)" target="_blank" rel="noopener noreferrer">https://en.wikipedia.org/wiki/Marea_(We've_Lost_Dancing)</a></p>
-</section>
-
-</body>
-</html>
+    <li><a href="#episode">制作時のエピソード</a></
