--- a/17.Billie (loving arms).html
+++ b/17.Billie (loving arms).html
@@ -3,32 +3,24 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Billie (loving arms) – 詳細解説</title>
+<title>Billie (loving arms) – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fafafa;
+    background: #fffefa;
     color: #222;
     line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
   h1, h2 {
-    color: #0073cc;
+    color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p, pre {
+  p, pre, ul, li {
     margin: 0.6em 0;
-  }
-  pre {
-    background: #f0f0f0;
-    padding: 1em;
-    border-radius: 6px;
-    white-space: pre-wrap;
-    word-break: break-word;
-    font-family: "Courier New", Courier, monospace;
   }
   ul {
     padding-left: 1.4em;
@@ -36,12 +28,20 @@
   ul li {
     margin-bottom: 0.4em;
   }
+  pre {
+    background: #f7f7f7;
+    border-radius: 6px;
+    padding: 1em;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: "Courier New", Courier, monospace;
+  }
   #toc {
     background: #dceeff;
     border: 1px solid #99bbff;
     border-radius: 8px;
-    padding: 1em 1em 1em 1.2em;
-    margin-bottom: 1.8em;
+    padding: 1em 1.2em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
@@ -56,14 +56,13 @@
   }
   #toc a {
     color: #0055aa;
-    text-decoration: none;
     font-weight: 600;
+    text-decoration: none;
   }
   #toc a:hover,
   #toc a:focus {
     text-decoration: underline;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
       padding: 0.8em 1em;
@@ -80,31 +79,36 @@
 </head>
 <body>
 
-<h1>Billie (loving arms) – 詳細解説</h1>
+<h1>Billie (loving arms) – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#points">主なポイント</a></li>
-    <li><a href="#lyrics">歌詞抜粋</a></li>
-    <li><a href="#bridge">Bメロ歌詞</a></li>
-    <li><a href="#outro">アウトロ歌詞</a></li>
-    <li><a href="#interpretation">解釈・詩的考察</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">意訳・詩的解釈</a></li>
   </ul>
 </nav>
 
-<section id="points">
-  <h2>主なポイント</h2>
-  <ul>
-    <li>リリース日：2021年8月31日</li>
-    <li>収録アルバム：Actual Life 2 (February 2 – October 15 2021)</li>
-    <li>追加プロダクション：Boo, Emmanuel Franklyn Adelabu, PARISI, Mark Ralph, Henry Counsell</li>
-    <li>ミキシング＆マスタリング：Jay Reynolds</li>
-  </ul>
+<section id="episode">
+  <h2>制作時のエピソード</h2>
+  <p>
+    <strong>“Billie (loving arms)”</strong>は、Fred again..の2021年8月31日リリースのアルバム『Actual Life 2 (February 2 – October 15 2021)』に収録されたトラックであり、エモーショナルなダンスミュージックに分類されます。
+  </p>
+  <p>
+    この楽曲の制作には、Fred again..のほかにBoo、Emmanuel Franklyn Adelabu、PARISI、Mark Ralph、Henry Counsellといった多彩な追加プロダクション陣が参加し、最終ミキシングとマスタリングはJay Reynoldsが担当しました。
+  </p>
+  <p>
+    Fred again..は制作過程で、1994年のダンスクラシックで知られるBillie Ray Martinの「Your Loving Arms」から、甘くも切ないヴォーカルを大胆にサンプリングしました。Fred自身、この曲の持つ「愛の抱擁」というテーマに強く共感し、そのサンプルをエモーショナルに再解釈してトラックに落とし込みました。
+  </p>
+  <p>
+    サンプリングされたフレーズは、FredがSNSで撮影したクラブ現場での盛り上がりや反応と連動する形でエフェクト処理が加えられており、ライブでもリスナーが深く感情移入できる没入感を生み出しています。
+  </p>
 </section>
 
 <section id="lyrics">
-  <h2>歌詞抜粋</h2>
+  <h2>英語歌詞（主要パート）</h2>
   <pre>
 And I reach out, out, out, out, out, out  
 And I reach out, out, out, out, out, out  
@@ -127,27 +131,45 @@ That's all you gotta do
   </pre>
 </section>
 
-<section id="bridge">
-  <h2>Bメロ歌詞</h2>
-  <p>燃えさかる胸の奥　揺れる想い<br>
-  君はまた優しく抱きしめてくれる<br>
-  燃えさかる胸の奥　揺れる想い<br>
-  君はまた優しく抱きしめてくれる</p>
-</section>
-
-<section id="outro">
-  <h2>アウトロ歌詞</h2>
-  <p>手を伸ばす　何度でも<br>
-  君へと手を伸ばす　何度でも<br>
-  ねぇ、君は優しく抱きしめてくれる<br>
-  ねぇ、君は優しく抱きしめてくれる</p>
+<section id="translation">
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳（一部抜粋）</strong></p>
+  <p>
+    〈イントロ・Aメロ〉<br>
+    「何度も手を伸ばすんだ<br>
+    ずっとずっと、僕は手を伸ばし続ける」
+  </p>
+  <p>
+    〈サビ〉<br>
+    「愛しい人、君は僕を優しく抱きしめてくれる<br>
+    何度もそうしてくれるんだ」
+  </p>
+  <p>
+    〈Bメロ〉<br>
+    「胸の奥が燃え上がる、揺れる想いを抱えて<br>
+    また優しく抱きしめてくれる」
+  </p>
+  <p>
+    〈アウトロ〉<br>
+    「ただそれをしてくれればいいんだ<br>
+    その抱擁はまるで避難所のように感じるんだ」
+  </p>
 </section>
 
 <section id="interpretation">
-  <h2>解釈・詩的考察</h2>
-  <p>“Billie (loving arms)”は、「行動のシンプルさ」が深い安心感を生むというメッセージを描いています。繰り返される「手を伸ばす」「抱きしめる」というフレーズは、感情の高ぶりや不安を抱えたときにこそ、人に委ねることの救いを象徴しています。</p>
-  <p>「燃えさかる胸の奥」という表現は、内的な苦しみや焦燥感を示し、それに応えるかのように「優しく抱きしめる」という動作が、物理的な接触以上に心のシェルターとして機能する様子を詩的に描写しています。</p>
-  <p>Fred again..は本トラックを通じて、他者とのつながりが持つ癒しの力をダンス・ミュージックという大衆的フォーマットで提示し、多くのリスナーに共感と慰めを提供しています。</p>
+  <h2>意訳・詩的解釈</h2>
+  <p>
+    “Billie (loving arms)”は、「行動のシンプルさゆえの圧倒的な安心感と救いの力」をテーマとした作品です。繰り返し歌われる「手を伸ばす」「抱きしめる」というフレーズは、不安や苦しみの中にあっても、ただ人に委ねることの救いを象徴しています。
+  </p>
+  <p>
+    「燃えさかる胸の奥」という表現は、内的な葛藤や高まる感情を穏やかに描写し、それを包み込むような抱擁のイメージが心のシェルターとして響きます。
+  </p>
+  <p>
+    フレッド自身による繊細なサウンドプロダクションとBillie Ray Martinの甘く切ないボーカルサンプルが融合し、リスナーに深い感情的共鳴と精神的な安堵をもたらしています。
+  </p>
+  <p>
+    これは単なるダンスミュージックに留まらず、ヒーリング的な側面を持ち合わせ、現代の多くのリスナーに寄り添う作品となっています。
+  </p>
 </section>
 
 </body>
