Update 18.Marco (and everyone).html

--- a/18.Marco (and everyone).html
+++ b/18.Marco (and everyone).html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Marco (and everyone) – 詳細解説</title>
+<title>Marco (and everyone) – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fafafa;
+    background: #fffefa;
     color: #222;
-    line-height: 1.7;
+    line-height: 1.65;
     margin: 0;
-    padding: 1em 1.2em;
+    padding: 1em 1.4em;
   }
   h1, h2 {
     color: #0073cc;
@@ -19,19 +19,26 @@
     margin-top: 1.8em;
     margin-bottom: 0.7em;
   }
-  p {
+  p, ul, li, pre {
     margin: 0.7em 0;
   }
   ul {
-    padding-left: 1.4em;
-    margin: 0.5em 0;
+    padding-left: 1.5em;
   }
   ul li {
-    margin-bottom: 0.4em;
+    margin-bottom: 0.5em;
+  }
+  pre {
+    background: #f7f7f7;
+    padding: 1em;
+    border-radius: 8px;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: "Courier New", Courier, monospace;
   }
   #toc {
-    background: #e3f0ff;
-    border: 1px solid #a2c4ff;
+    background: #d9eaff;
+    border: 1px solid #a3c4ff;
     border-radius: 8px;
     padding: 1em 1.2em;
     margin-bottom: 2em;
@@ -41,11 +48,11 @@
   }
   #toc ul {
     list-style: none;
-    padding-left: 0;
     margin: 0;
+    padding-left: 0;
   }
   #toc ul li {
-    margin: 0.35em 0;
+    margin: 0.4em 0;
   }
   #toc a {
     color: #0055aa;
@@ -55,60 +62,105 @@
   #toc a:hover,
   #toc a:focus {
     text-decoration: underline;
+    outline: none;
   }
-  /* モバイル対応 */
-  @media (max-width:480px) {
+  @media (max-width: 480px) {
     body {
-      padding: 0.9em 1em;
       font-size: 1em;
+      padding: 0.8em 1em;
+      line-height: 1.5;
     }
     h1 {
-      font-size: 1.5em;
+      font-size: 1.4em;
     }
     h2 {
-      font-size: 1.3em;
+      font-size: 1.1em;
     }
   }
 </style>
 </head>
 <body>
 
-<h1>Marco (and everyone) – 詳細解説</h1>
+<h1>Marco (and everyone) – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#basic-info">収録アルバム・基本情報</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
-    <li><a href="#songdata">リンク・参考情報</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞（主要パート抜粋）</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">詩的解釈・まとめ</a></li>
   </ul>
 </nav>
 
-<section id="basic-info">
-  <h2>収録アルバム・基本情報</h2>
-  <ul>
-    <li>収録アルバム：Actual Life 2 (February 2 – October 15 2021)</li>
-    <li>リリース日：2021年11月19日</li>
-    <li>長さ：2分29秒</li>
-    <li>ジャンル：エレクトロニック／エモーショナル・ダンス</li>
-    <li>テンポ：128 BPM, 4/4拍子, Cマイナー (Camelot 5A)</li>
-  </ul>
-</section>
-
-<section id="production">
+<section id="episode">
   <h2>制作時のエピソード</h2>
-  <p>“Marco (and everyone)”は、Fred again.. の日常の断片を「声」として取り込み、多層的なボーカルサンプリングによってエモーショナルな躍動を生み出す制作手法の象徴的な曲です。</p>
-  <p>プロデューサーおよびエンジニアには、Fred again..、Emmanuel Franklyn Adelabu、Joy Anonymous、PARISI（Giampaolo & Marco Parisi）が参加し、ミキシングはJay Reynoldsが担当しています。</p>
-  <p>ボーカルサンプリングにはBillie Ray Martin、FACESOUL、Tate McCrae、Terra Kinなど多彩な音声素材を層状に重ねており、それぞれの断片がゾーンを切り替えるように配置されています。</p>
-  <p>Brian Enoの指導のもとFred again..は「断片をループし非線形に乗せる」試みを実践し、2分半の短尺に高密度のエモーションとクラブ的高揚感を凝縮させています。</p>
-  <p>この曲の構造は現代の雑踏や共有体験を音で映し出す鏡のように機能し、Fred again.. 「Actual Life」シリーズを代表する作品の一つです。</p>
+  <p>
+    <strong>“Marco (and everyone)”</strong>は、Fred again..のアルバム『Actual Life 2 (February 2 – October 15 2021)』に収録されており、2021年11月19日にリリースされました。ジャンルはエレクトロニックでエモーショナル・ダンスに分類され、再現長は約2分30秒、テンポは128 BPM、拍子は4/4拍子、キーはCマイナー（Camelot 5A）に設定されています。
+  </p>
+  <p>
+    この楽曲は、Fred again..の「日常の断片を音で紡ぎ出す」独自の制作哲学を体現した作品の一つです。彼は自らの日常における声や音を切り取り、それらを断片的かつ非線形的にサンプルリングし、多層的に重ね合わせることで、エモーショナルで繊細なサウンドスケープを生み出しています。
+  </p>
+  <p>
+    プロダクションにはFred again..自身のほかに、Emmanuel Franklyn Adelabu、Joy Anonymous、PARISI（Giampaolo & Marco Parisi）が参加し、ミキシングとマスタリングはJay Reynoldsが担当しました。Joy AnonymousやPARISIによる音のテクスチャーがトラックに深みと空間的広がりを加えています。
+  </p>
+  <p>
+    特筆すべきは、楽曲内で繰り返される“声のテクスチャー”。「I love you」「Where’s my brother?」「and everyone」などのフレーズが断片的に重なり合うことで、現代都市の雑踏や人々の様々な思いが音響化されています。この繰り返しによって生まれる一体感や共有体験がこの曲の核となっています。
+  </p>
+  <p>
+    Brian Enoの指導を受けたFred again..は、この曲で「断片のループを繰り返すのではなく、少しずつ入れ替えていく非線形的なアプローチ」を実践。わずかな変化による動きと感情の揺らぎを音楽に反映させており、その結果、短尺ながら濃密な没入感を持つ作品に仕上げました。
+  </p>
 </section>
 
-<section id="songdata">
-  <h2>リンク・参考情報</h2>
+<section id="lyrics">
+  <h2>英語歌詞（主要パート抜粋）</h2>
+  <pre>
+I love you, I love you, I love you...
+
+Where’s my brother?
+
+And everyone...
+
+You make me feel alive...
+
+(Fade out)
+  </pre>
+  <p>
+    ※本楽曲は伝統的な歌詞というよりも、断片的な声や言葉の断片をサンプリングし組み合わせた構成になっているため、上記は理解しやすい代表的なパート抜粋です。
+  </p>
+</section>
+
+<section id="translation">
+  <h2>歌詞の和訳・意訳</h2>
+  <p>
+    〈断片的なフレーズの意味〉
+  </p>
   <ul>
-    <li><a href="https://songdata.io/track/586YOB3K1KcWtOKLUq2lKl/Marco-and-everyone-by-Fred-again" target="_blank" rel="noopener noreferrer">Songdata - Marco and everyone by Fred again..</a></li>
+    <li><strong>I love you, I love you, I love you...</strong>：「愛してるよ、愛してるよ」と繰り返されるこのフレーズは、深い愛情と共感の表現として機能しています。</li>
+    <li><strong>Where’s my brother?</strong>：「兄弟はどこ？」という問いかけは、連帯感や家族、共感への欲求を象徴し、都会の中の孤独や疎外感と対比されます。</li>
+    <li><strong>And everyone...</strong>：多様な人々や社会の断片を示す言葉で、個人の経験を超えて集合的な感情や体験を表しています。</li>
+    <li><strong>You make me feel alive...</strong>：誰かの存在が生きる活力や喜びの源であることを表し、暗く無秩序な環境の中での希望や安心感を暗示しています。</li>
   </ul>
+</section>
+
+<section id="interpretation">
+  <h2>詩的解釈・まとめ</h2>
+  <p>
+    “Marco (and everyone)”は、Fred again..の「日常の断片を音で紡ぎ、物語を生み出す」という音楽哲学を強く体現したトラックです。  
+    特定のストーリーや明確な歌詞が存在しない代わりに、非線形に重なり合う断片が、現代の多様で複雑な生活や感情の交錯を象徴しています。
+  </p>
+  <p>
+    <strong>この曲が示す世界観：</strong>
+    <ul>
+      <li>都市の雑踏や人々の思いが重なり合う、断片的で動的な「音のモザイク」</li>
+      <li>個の経験を超えた「集合的体験」としての音楽表現</li>
+      <li>Brian Enoの影響を受けた非線形的制作仕様が、表面には見えない微細な変化で感情の流れを演出</li>
+    </ul>
+  </p>
+  <p>
+    トラック全体はわずか2分半に濃密なエモーションを凝縮し、聴く者を音の渦へと没入させる没入的な体験を提供します。  
+    Fred again..の制作スタイルの特徴である「生の声の断片」と「精巧な音響編集」が高いレベルで融合した、エレクトロニック・エモーショナルダンスの傑作といえるでしょう。
+  </p>
 </section>
 
 </body>
