Update 19.Delilah (pull me out of this).html

--- a/19.Delilah (pull me out of this).html
+++ b/19.Delilah (pull me out of this).html
@@ -3,53 +3,60 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Delilah (pull me out of this) – 詳細解説</title>
+<title>Delilah (pull me out of this) – 楽曲詳細解説</title>
 <style>
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    background: #fcfcfc;
+    background: #fffefa;
     color: #222;
     line-height: 1.6;
     margin: 0;
     padding: 1em 1.2em;
   }
   h1, h2 {
-    color: #0055aa;
+    color: #0077cc;
     font-weight: bold;
     margin-top: 1.6em;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
   }
-  p {
+  p, ul, li, pre {
     margin: 0.6em 0;
   }
+  ul {
+    list-style: none;
+    padding-left: 0;
+  }
+  pre {
+    background: #f7f7f7;
+    border-radius: 6px;
+    padding: 1em;
+    white-space: pre-wrap;
+    word-break: break-word;
+    font-family: "Courier New", Courier, monospace;
+  }
   #toc {
-    background: #e0eaff;
-    border: 1px solid #a0bfff;
+    background: #dceeff;
+    border: 1px solid #99bbff;
     border-radius: 8px;
     padding: 1em 1.2em;
-    margin-bottom: 1.8em;
+    margin-bottom: 2em;
   }
   #toc h2 {
     margin-top: 0;
   }
-  #toc ul {
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-  }
   #toc ul li {
-    margin: 0.3em 0;
+    margin: 0.4em 0;
   }
   #toc a {
-    color: #004a99;
+    color: #0055aa;
     text-decoration: none;
     font-weight: 600;
   }
   #toc a:hover,
   #toc a:focus {
     text-decoration: underline;
+    outline: none;
   }
-  /* モバイル対応 */
   @media (max-width: 480px) {
     body {
       padding: 0.8em 1em;
@@ -66,24 +73,86 @@
 </head>
 <body>
 
-<h1>Delilah (pull me out of this) – 詳細解説</h1>
+<h1>Delilah (pull me out of this) – 楽曲詳細解説</h1>
 
 <nav id="toc" aria-label="目次">
   <h2>目次</h2>
   <ul>
-    <li><a href="#release-context">リリース＆コンテキスト</a></li>
-    <li><a href="#production">制作時のエピソード</a></li>
+    <li><a href="#episode">制作時のエピソード</a></li>
+    <li><a href="#lyrics">英語歌詞（主要パート）</a></li>
+    <li><a href="#translation">歌詞の和訳・意訳</a></li>
+    <li><a href="#interpretation">意訳・詩的解釈</a></li>
   </ul>
 </nav>
 
-<section id="release-context">
-  <h2>リリース＆コンテキスト</h2>
-  <p>“Delilah (pull me out of this)”は、Fred again..のサードアルバム <em>Actual Life 3 (January 1 – September 9 2022)</em>（2022年10月28日リリース）からのシングル第4弾として発表された楽曲です。Boiler Roomでのライブ初披露がSNSで大きな話題を呼び、現在までに数百万再生を記録しています。</p>
+<section id="episode">
+  <h2>制作時のエピソード</h2>
+  <p><strong>“Delilah (pull me out of this)”</strong>は、Fred again..のアルバム『Actual Life 3 (January 1 – September 9 2022)』からのシングル第4弾として2022年10月28日にリリースされました。Boiler Roomでのライブセットにて初披露され、SNS上で大きな話題となった楽曲で、現在では数百万回のストリーミング再生数を記録しています。</p>
+  <p>制作の中心となるボーカルは、Fredの友人で歌手・アーティストのDelilah MontaguがInstagramに投稿した自身の楽曲 “Lost Keys” のライブ映像から歌唱断片をサンプリングしたものです。Delilah本人はこの曲について、「クラブでのパニック発作に襲われた体験を書いた」と語っており、その切実でリアルな感情が楽曲の核として生かされています。</p>
+  <p>Fred again..はライブセット中にこのサンプルを即興的に多重ループで重ね、観客の歓声や呼びかけも取り込みながらトラックを構築しました。この制作手法は彼の代表的なスタイルの一つである「日常の断片をダンスミュージックへ昇華するアプローチ」を体現しており、楽曲に生々しい臨場感と暖かみを与えています。</p>
 </section>
 
-<section id="production">
-  <h2>制作時のエピソード</h2>
-  <p>セット中に即興でサンプルを多重ループし、観客の歓声や呼びかけを取り込む手法で構築されました。Fred again..の「日常の断片をダンスミュージックに昇華する」作風が色濃く反映された一曲です。</p>
+<section id="lyrics">
+  <h2>英語歌詞（主要パート）</h2>
+  <pre>
+[Intro]  
+So when I just got here  
+I was just a bit like  
+I don’t want to be here anymore  
+Pull me out of this  
+(Hey Fred)  
+(Hahahaha, holy shit)
+
+[Pre-Drop / Drop]  
+Pull me out of this
+
+[Bridge]  
+Touch me (Oh my god)  
+Talk to me (I knew we were gonna dance, but)  
+(We danced so hard)  
+Touch me (Hahahaha, holy shit)  
+Talk to me / Touch me / Talk to me
+
+[Outro Drop]  
+Music, the music, the music  
+The music’s getting faster  
+(Oh my god)
+  </pre>
+</section>
+
+<section id="translation">
+  <h2>歌詞の和訳・意訳</h2>
+  <p><strong>直訳</strong></p>
+  <p>〈Intro〉<br>
+    「ここに来たとき、ちょっとこう感じた<br>
+    もうここにはいたくないんだ<br>
+    私をここから連れ出して<br>
+    （ヘイ、フレッド）<br>
+    （ハハハ、ヤバい！）」
+  </p>
+  <p>〈Pre-Drop / Drop〉<br>
+    「私をここから連れ出して」
+  </p>
+  <p>〈Bridge〉<br>
+    「触れて（オーマイガー）<br>
+    話しかけて（踊るって分かってたけど）<br>
+    （私たちはめちゃくちゃ踊った）<br>
+    触れて（ハハハ、ヤバい！）<br>
+    話しかけて / 触れて / 話しかけて」
+  </p>
+  <p>〈Outro Drop〉<br>
+    「音楽、音楽、音楽<br>
+    音楽はどんどん速くなっていく<br>
+    （オーマイガー）」
+  </p>
+</section>
+
+<section id="interpretation">
+  <h2>意訳・詩的解釈</h2>
+  <p>この楽曲は「クラブの喧騒や混乱の中で感じる不安」と「信頼できる存在からの救い」を絶妙に描写しています。繰り返される「Pull me out of this（私をここから連れ出して）」は、混沌やパニック、孤独といった心理的状態から抜け出したいという切実な叫びとして機能します。</p>
+  <p>「Touch me」「Talk to me」というフレーズは、身体的な安心感や言葉によるコミュニケーションへの欲求を示しており、特にクラブ空間の中での人間関係の象徴とも解釈可能です。</p>
+  <p>サンプリングされた観客の歓声や「holy shit」のかけ声が散りばめられていて、リアルなライブの熱気がそのまま楽曲に溶け込んでいることも特徴的です。</p>
+  <p>楽曲は内面的な不安や混乱のテーマを扱いながらも、パーティの高揚感やノリの良さも同時に伝え、聴き手を感情のダイナミズムに引き込む秀逸な作品となっています。</p>
 </section>
 
 </body>
