--- a/目次.html
+++ b/目次.html
@@ -58,25 +58,44 @@
   <nav id="toc" aria-label="目次">
     <h1>目次</h1>
     <ul>
-      <li><a href="https://newrootsjp.github.io/-/1.Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
-      <li><a href="https://newrootsjp.github.io/-/2.Bleu (better with time).html">2.Bleu (better with time)</a></li>
-      <li><a href="https://newrootsjp.github.io/-/3.glow.html">3.glow</a></li>
-      <li><a href="https://newrootsjp.github.io/-/4.adore u.html">4.adore u</a></li>
-      <li><a href="https://newrootsjp.github.io/-/5.places to be.html">5.places to be</a></li>
-      <li><a href="https://newrootsjp.github.io/-/6.Victory Lap.html">6.Victory Lap</a></li>
-      <li><a href="https://newrootsjp.github.io/-/7.Victory Lap Four.html">7.Victory Lap Four</a></li>
-      <li><a href="https://newrootsjp.github.io/-/8.Jungle.html">8.Jungle</a></li>
-      <li><a href="https://newrootsjp.github.io/-/9.Rumble.html">9.Rumble</a></li>
-      <li><a href="https://newrootsjp.github.io/-/10.peace u need.html">10.peace u need</a></li>
-      <li><a href="https://newrootsjp.github.io/-/11.leavemealone.html">11.leavemealone</a></li>
-      <li><a href="https://newrootsjp.github.io/-/12.Turn On the Lights again...html">12.Turn On the Lights again..</a></li>
-      <li><a href="https://newrootsjp.github.io/-/13.Danielle (smile on my face).html">13.Danielle (smile on my face)</a></li>
-      <li><a href="https://newrootsjp.github.io/-/14.Angie (I’ve Been Lost).html">14.Angie (I’ve Been Lost)</a></li>
-      <li><a href="https://newrootsjp.github.io/-/15.Clara (the night is dark).html">15.Clara (the night is dark)</a></li>
-      <li><a href="https://newrootsjp.github.io/-/16.Marea (we’ve lost dancing).html">16.Marea (we’ve lost dancing)</a></li>
-      <li><a href="https://newrootsjp.github.io/-/17.Billie (loving arms).html">17.Billie (loving arms)</a></li>
-      <li><a href="https://newrootsjp.github.io/-/18.Marco (and everyone).html">18.Marco (and everyone)</a></li>
-      <li><a href="https://newrootsjp.github.io/-/19.Delilah (pull me out of this).html">19.Delilah (pull me out of this)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/1.Kyle (I Found You).html">1.Kyle (I Found You)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/2.Bleu (better with time).html">2.Bleu (better with time)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/3.glow.html">3.glow</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/4.adore u.html">4.adore u</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/5.places to be.html">5.places to be</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/6.Victory Lap.html">6.Victory Lap</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/7.Victory Lap Four.html">7.Victory Lap Four</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/8.Jungle.html">8.Jungle</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/9.Rumble.html">9.Rumble</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/10.peace u need.html">10.peace u need</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/11.leavemealone.html">11.leavemealone</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/12.Turn On the Lights again...html">12.Turn On the Lights again..</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/13.Danielle (smile on my face).html">13.Danielle (smile on my face)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/14.Angie (I’ve Been Lost).html">14.Angie (I’ve Been Lost)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/15.Clara (the night is dark).html">15.Clara (the night is dark)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/16.Marea (we’ve lost dancing).html">16.Marea (we’ve lost dancing)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/17.Billie (loving arms).html">17.Billie (loving arms)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/18.Marco (and everyone).html">18.Marco (and everyone)</a></li>
+      <li><a href="https://newrootsjp.github.io/fred_again.._FR2025
+/19.Delilah (pull me out of this).html">19.Delilah (pull me out of this)</a></li>
     </ul>
   </nav>
 
