Update 1.Kyle (I Found You).html

--- a/1.Kyle (I Found You).html
+++ b/1.Kyle (I Found You).html
@@ -78,6 +78,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>Kyle (I Found You) – 楽曲詳細解説</h1>
 
@@ -237,6 +240,9 @@ our shoulder blades kissed.
   <p>この楽曲は、終末論的な世界観の中での愛の物語として、絶望的な状況でも人間同士のつながりが希望をもたらすという普遍的なテーマを扱っており、現代の不安定な社会情勢の中で多くの人々に共感を呼んでいます。</p>
   <p>特に「I want you to see me, Fred, I'm here」という部分は、Fred Again..に直接語りかける形で挿入されており、サンプリングされた声の主でありながら、制作者との対話を表現した非常にメタフィクショナルな要素となっています。</p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
