Update 10.peace u need.html

--- a/10.peace u need.html
+++ b/10.peace u need.html
@@ -78,6 +78,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>peace u need – 楽曲詳細解説</h1>
 
@@ -187,6 +190,9 @@ Silence keeps clouding, silence keeps clouding
     Fred again..とともに歌うSnoh Aalegraの繊細な歌声が、楽曲の内省的で切実な感情を一層引き立てており、エレクトロニック・ダンスミュージックとしてありながらも強い共感をリスナーに呼び起こします。
   </p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
