--- a/11.leavemealone.html
+++ b/11.leavemealone.html
@@ -78,6 +78,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>leavemealone – 楽曲詳細解説</h1>
 
@@ -198,6 +201,9 @@ My mama tried to warn these hoes not to break my heart again
     “leavemealone”はFred again..とBaby Keemによるユニークなセッションから生まれ、クラブフロアの高揚感とパーソナルな葛藤や孤独が両立する、現代的な多面性を持った傑作トラックといえます。
   </p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
