Update 12.Turn On the Lights again...html

--- a/12.Turn On the Lights again...html
+++ b/12.Turn On the Lights again...html
@@ -70,6 +70,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>Turn On the Lights again.. – 楽曲詳細解説</h1>
 
@@ -169,6 +172,9 @@ I'm lookin' for, I'm lookin' for her
     “Turn On the Lights again..”は、クラブサウンドならではの躍動感と心を打つ普遍的な希望のメッセージを融合した現代アンセム。サンプリングを巧みに活かしたFred again..流のプロダクションが光り、誰もが「再び光が差す瞬間」を待ち望む時代の希望を音楽で体現した楽曲となっています。
   </p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
