Update 13.Danielle (smile on my face).html

--- a/13.Danielle (smile on my face).html
+++ b/13.Danielle (smile on my face).html
@@ -72,6 +72,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>Delilah (pull me out of this) – 楽曲詳細解説</h1>
 
@@ -154,6 +157,9 @@ The music’s getting faster
   <p>サンプリングされた観客の歓声や「holy shit」のかけ声が散りばめられていて、リアルなライブの熱気がそのまま楽曲に溶け込んでいることも特徴的です。</p>
   <p>楽曲は内面的な不安や混乱のテーマを扱いながらも、パーティの高揚感やノリの良さも同時に伝え、聴き手を感情のダイナミズムに引き込む秀逸な作品となっています。</p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
