Update 14.Angie (I’ve Been Lost).html

--- a/14.Angie (I’ve Been Lost).html
+++ b/14.Angie (I’ve Been Lost).html
@@ -78,6 +78,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>Angie (I’ve Been Lost) – 楽曲詳細解説</h1>
 
@@ -168,6 +171,9 @@ Don't have nothin' left
   <p>繰り返される「何も持っていない」「壊さないで」というフレーズは、不安や葛藤を映し出しつつ、聴き手に寄り添います。また「あなたがいるから続けられる」という言葉は、孤独の中の支えや希望を象徴しています。</p>
   <p>Fred again..の非線形的で断片的なサンプリング手法は、断片的な感情や記憶の集積として表現され、それが独特の空間とムードを作り上げています。</p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
