--- a/15.Clara (the night is dark).html
+++ b/15.Clara (the night is dark).html
@@ -78,6 +78,9 @@
 </style>
 </head>
 <body>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 <h1>Clara (the night is dark) – 楽曲詳細解説</h1>
 
@@ -180,6 +183,9 @@ You're in here crazy like, don't worry
     結果として“Clara (the night is dark)”は、穏やかな荘厳さを持ちつつ、多くのリスナーに力強い共感と励ましを届ける感動的なアンセムとなっています。
   </p>
 </section>
+<p>
+  <a href="https://newrootsjp.github.io/fred_again.._FR2025/%E7%9B%AE%E6%AC%A1.html">← 目次へ戻る</a>
+</p>
 
 </body>
 </html>
